# AutonomousRobot

./: .gitignore  atlas_fusion_node.py  observability.py  semantic_obstacles_node.py  serial_bridge_pid_READY.py  start_atlas.sh  start_robot.sh  sys_stats_node.py
arduino_firmware/motor_control/: motor_control.ino
arduino_firmware/motor_control_pid/: motor_control_pid.ino  motor_control_pid.ino.bak_20260627_002532
arduino_firmware/motor_control_pid_ultrasonic/: motor_control_pid_ultrasonic.ino
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json
dashboard/design/: dashboard_mockup_v2.html  prototype_map_renderer.html
dashboard/src/: App.jsx  ErrorBoundary.jsx  main.jsx  theme.css
nav2_config/: nav2_params.yaml  nav2_phase1_launch.py
ros2_ws/: ekf_config.yaml  start_robot.sh
ros2_ws/src/motor_bridge/: package.xml  setup.py
ros2_ws/src/motor_bridge/config/: slam_params.yaml
ros2_ws/src/motor_bridge/launch/: robot_bringup.launch.py
ros2_ws/src/motor_bridge/motor_bridge/: coverage_benchmark.py  frontier_explorer.py  imu_node.py  imu_node.py.bak_20260627_043019  map_saver.py  pid_tuner.py  safety_layer.py  serial_bridge.py  serial_bridge.py.bak_20260626_141523  serial_bridge.py.bak_20260626_142726  serial_bridge.py.bak_20260626_171049  serial_bridge.py.bak_20260627_005913  serial_bridge.py.bak_20260627_010633  serial_bridge.py.bak_unstack_20260627_013128
voice/: .gitignore  README.md  atlas_voice_bridge.py  listen.py  locations.example.yaml  motion_executor.py  requirements.txt  server.py  voice_command_relay.py  voice_parser.py
(+49 files in other folders)
