<?xml version="1.0"?>
<package format="3">
  <name>motor_bridge</name>
  <version>0.0.1</version>
  <description>Serial bridge between ROS 2 and Arduino motor controller</description>
  <maintainer email="vinayak@iiitd.ac.in">Vinayak Sharma</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
